assets/css/style.scss
/* ... */
figure:hover .overlay .buttons a {
  transform: scale3d(1, 1, 1);
}

figure .overlay {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  padding: 10px;
  text-align: center;
  background: rgba(0, 0, 0, 0.7);
  opacity: 0;
  transition: opacity 400ms;
}

figure .overlay a {
  display: inline-block;
  color: #fff;
  padding: 10px 23px;
  line-height: 1;
  border: 1px solid #fff;
  border-radius: 0px;
  margin: 4px;
  transform: scale3d(0, 0, 0);
  transition: all 400ms;
}

figure .overlay a:hover {
  text-decoration: none;
}

figure .overlay:hover a {
  transform: scale3d(1, 1, 1);
}

figure .buttons {
  margin-top: 40%;
  text-align: center;
  transform: translateY(-50%);
  display: inline-block;
}

figure figcaption {
  padding: 10px 25px;
  margin-top: 0;
  color: #666;
}

figure figcaption h4 {
  margin: 0;
}

figure figcaption p {
  margin-bottom: 0;
  margin-top: 5px;
}

///
/// Contact Page
///

.contact-section input {
  display: block;
  height: 40px;
  padding: 6px 12px;
  line-height: 1.428571429;
  background-color: #fff;
  background-image: none;
  border: 1px solid #ccc;
  border-radius: 4px;
  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
  transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
  border-radius: 1px;
  border: 1px solid rgba(111, 121, 122, 0.3);
}

.contact-section textarea {
  display: block;
  border-radius: 0;
  width: 100%;
  padding: 6px 12px;
  line-height: 1.42857143;
  color: #555555;
  background-color: #fff;
  background-image: none;
  border: 1px solid #cccccc;
  box-shadow: none;
  transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
}

.contact-section .address-details {
  padding-top: 70px;
}

.contact-section .address,
.contact-section .email,
.contact-section .phone {
  text-align: center;
  background: #F7F7F7;
  padding: 20px 0 40px 0;
  margin-bottom: 20px;
}

#map-canvas {
  width: 100%;
  height: 350px;
  background-color: #CCC;
}

.error {
  padding: 10px;
  color: #D8000C;
  border-radius: 2px;
  background-color: #FFBABA;
}

.success {
  background-color: #6cb670;
  border-radius: 2px;
  color: #fff;
  padding: 10px;
}

#error,
#success {
  display: none;
  margin-bottom: 10px;
}

///
/// Blog List Page Tweaks
///
.blog-meta {
  font-style: italic;
}

///
/// Default Blog Single Tweaks
///

.author-card img {
  width: 100%;
  height: 100%;
  object-fit: cover;
  border-bottom-right-radius: 0;
}

///
/// Portfolio Single Tweaks
///

.sidebar {
  background: #eae9ec;
  position: sticky;
  padding: 2rem 1.5rem;
  z-index: -1;
}

.work-single blockquote {
  background: #eae9ec;
  color: #848484;
}


///
/// Gallery Section Page
///

/*
.gallery {
  padding: 100px;
}

.gallery figure .buttons {
  left: 40%;
}
*/

///
/// Service Page Tweaks
///

.service-page .service-parts .block {
  margin-bottom: 40px;
  text-align: center;
}

.service-page .service-parts .block ion-icon {
  font-size: 35px;
  color: $col-background;
}

.service-page .service-parts .block p {
  padding: 0 8px;
  color: #777;
  line-height: 1.7;
}

//
// Social Icons
//

.social-icons {
  display: inline;
}

.social-icons li {
  display: inline-block;
}

.social-icons li a {
  background: $col-background;
  color: #fff;
  padding: .37rem .37rem .12rem;
  border-radius: .37em;
}

/* taxonomy terms */
.badge-category,
a.badge-category {
  color: #fff !important;
  background-color: $col-tertiary;
  &:hover, &:focus {
    color: $col-tertiary !important;
    background: transparent;
    background-color: transparent;
    text-decoration: none;
    border-bottom: none;
  }
}

.badge-tag,
a.badge-tag {
  color: #fff !important;
  background-color: $col-background;
  &:hover, &:focus {
    color: $col-background !important;
    background: transparent;
    background-color: transparent;
    text-decoration: none;
    border-bottom: none;
  }
}

.badge {
  display: inline-block;
  padding: 0.25em 0.4em;
  font-size: 0.75rem;
  font-weight: 400;
  line-height: 1;
  text-align: center;
  white-space: nowrap;
  vertical-align: baseline;
  border-radius: 0.25rem;
}

.letter {
    color: #3c6382;
    font-size: 1.2rem;
    font-weight: 400;
    display: inline-block;
    width: 100%;
    border-bottom: 1.25pt solid #3c6382;
    margin-top: 1rem;
    margin-bottom: .5rem;
}

.badge-tag-list,
a.badge-tag-list {
  color: $col-background !important;
  border-radius: 0.25rem;
  border: 1pt $col-background solid;
  &:hover, &:focus {
    color: #fff !important;
    background-color: $col-background;
    // background: transparent;
    // background-color: transparent;
    text-decoration: none;
    border-bottom: none;
  }
}

.badge-tag-list-page,
a.badge-tag-list-page {
  color: $col-background !important;
  min-width: 200px;
  border-radius: 0.25rem;
  margin-bottom: 5px;
  margin-right: 5px;
  border: 1pt $col-background solid;
  &:hover, &:focus {
    color: #fff !important;
    background-color: $col-background;
  }
}

/* fastSearch */
#searchResults {
  visibility: hidden;
  position: absolute;
  right: 20px;
  display: inline-block;
  width: 320px;
  min-width: 300px;
  font-size: .8em;
  z-index: 99;
}

#searchResults li {
  list-style: none;
  list-style-position: inside;
  margin-left: 0;
  background-color: #333;
  padding: 0;
  border-bottom: 1px dotted #000;
}

#searchResults a {
  text-decoration: none !important;
  padding: 10px;
  display: inline-block;
  color: #ddd;
}

#searchResults a:hover, a:focus {
  outline: 0;
  background-color: #666;
  color: #fff;
}

#searchResults li .title {
  font-size: 1.5em;
  margin-bottom: 10px;
  display: inline-block;
  color: $col-hover;
}

#searchResults li .section {
  font-variant-caps: all-small-caps;
}

#searchResults li .summary {
   font-style: italic;
}

.tag-cloud {
  background: #eae9ec;
}

.tag-cloud a {
  padding-left: .25rem;
  padding-right: .25rem;
}

/* blog */
.pagination {
  justify-content: center;
  padding: 30px 0;
  margin-bottom: 0;
}
/* ... */

